# SafeNameAndChat

./: .travis.yml  CMakeLists.txt  Compile.sh  Main.cpp  Main.h  Publish.bat  README.md  SafeNameAndChat.cfg  SafeNameAndChat.sln  SafeNameAndChat.vcxproj  SafeNameAndChat.vcxproj.filters  version_script.lds
.github/workflows/: build.yml
hlsdk/dlls/: extdll.h
